<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/poster_description"/>

        <ImageView
            android:id="@+id/movie_thumbnail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignBottom="@+id/movie_poster"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:contentDescription="@string/thumbnail_description"/>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/movie_thumbnail"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="64dp"
            android:layout_toRightOf="@+id/movie_thumbnail"
            android:text="@string/movie_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/movie_poster"
            android:layout_centerHorizontal="true"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_release"
                android:gravity="center"
                android:text="@string/placeholder_release_date"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_rating"
                android:gravity="center"
                android:text="@string/placeholder_rating"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/movie_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_thumbnail"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="12dp"
            android:text="@string/synopsis"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/movie_synopsis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/movie_synopsis_label"
            android:layout_below="@+id/movie_synopsis_label"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="New Text"/>

    </RelativeLayout>
</ScrollView>
